# neo-dash

./: .gitignore  CONTRIBUTING.md  Cargo.toml  NEODASH_COSMIC_RUNTIME_ADAPTER_PATCH.md  NEODASH_COSMIC_WIDGET_SURFACES_PATCH.md  NEODASH_GTK_RUNTIME_ADAPTER_PATCH.md  NEODASH_LAYOUT_MODE_PATCH.md  NEODASH_PROFILE_LOADING_PATCH.md  NEODASH_PROFILE_VALIDATION_PATCH.md  NEODASH_RUNTIME_EVENT_STREAM_PATCH.md  README.md
.github/workflows/: ci.yml
crates/neodash-app/: Cargo.toml
crates/neodash-app/src/: main.rs
crates/neodash-cli/: Cargo.toml
crates/neodash-cli/src/: main.rs
crates/neodash-core/: Cargo.toml
crates/neodash-core/src/: config.rs  config_paths.rs  ids.rs  lib.rs  model.rs  profile.rs
crates/neodash-cosmic/: Cargo.toml
crates/neodash-cosmic/src/: main.rs  surface_plan.rs
crates/neodash-daemon/: Cargo.toml
crates/neodash-daemon/src/: main.rs
crates/neodash-exec/: Cargo.toml
crates/neodash-exec/src/: lib.rs
crates/neodash-platform/: Cargo.toml
crates/neodash-platform/src/: lib.rs
crates/neodash-renderer/: Cargo.toml
crates/neodash-renderer/src/: lib.rs
crates/neodash-runtime/: Cargo.toml
crates/neodash-runtime/src/: lib.rs
crates/neodash-tail/: Cargo.toml
crates/neodash-tail/src/: lib.rs
docs/: ARCHITECTURE.md  CONFIG_DIRECTORY.md  COSMIC_RENDERING.md  COSMIC_WIDGET_SURFACES.md  DUAL_FRONTEND_DEVELOPMENT.md  GTK_RUNTIME_ADAPTER.md  LAYOUT_MODE.md  NEXT_STEPS.md  PROFILE_LOADING.md  PROFILE_MODEL.md  PROFILE_VALIDATION.md  ROADMAP.md  RUNTIME_EVENT_STREAM.md
examples/profiles/: default.toml
examples/widgets/: date.toml  uptime.toml
research/: geektool-feature-map.md  open-source-mining.md
scripts/: bootstrap_popos_ubuntu.sh  check_cosmic_runtime_adapter.sh  check_cosmic_widget_surfaces.sh  check_frontends.sh  check_gtk_runtime_adapter.sh  check_headless.sh  check_runtime_stream.sh
tools/patches/phase_config_directory/: README_PATCH.md  apply.sh  apply_config_directory.py
tools/patches/phase_config_directory_fix/: README_PATCH.md  apply.sh  apply_config_directory_fix.py
tools/patches/phase_cosmic_runtime_adapter/: README_PATCH.md  apply.sh  apply_cosmic_runtime_adapter.py
tools/patches/phase_cosmic_wgpu_hotfix/: README_PATCH.md  apply.sh  apply_cosmic_wgpu_hotfix.py
tools/patches/phase_cosmic_widget_surfaces/: README_PATCH.md  apply.sh  apply_cosmic_widget_surfaces.py
tools/patches/phase_dual_frontend_scaffold/: README_PATCH.md  apply.sh  apply_dual_frontend_scaffold.py
tools/patches/phase_gtk_runtime_adapter/: README_PATCH.md  apply.sh  apply_gtk_runtime_adapter.py
tools/patches/phase_layout_mode/: apply.sh  apply_layout_mode.py
tools/patches/phase_profile_loading/: apply.sh  apply_profile_loading.py
tools/patches/phase_profile_validation/: apply.sh  apply_profile_validation.py
tools/patches/phase_runtime_event_stream/: README_PATCH.md  apply.sh  apply_runtime_event_stream.py
tools/patches/phase_shared_profile_model/: README_PATCH.md  apply.sh  apply_shared_profile_model.py
