[package]
name = "neodash-app"
version = "0.0.1"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "neodash-app"
path = "src/main.rs"

[features]
default = []
gui = ["dep:gtk", "dep:adw", "dep:gtk4-layer-shell"]

[dependencies]
anyhow.workspace = true
neodash-core = { path = "../neodash-core" }
neodash-platform = { path = "../neodash-platform" }
tracing.workspace = true
tracing-subscriber.workspace = true

# GUI stack. The current code is still a stub, but these are the intended crates.
gtk = { workspace = true, optional = true }
adw = { workspace = true, optional = true }
gtk4-layer-shell = { workspace = true, optional = true }
