[package]
name = "neodash-app"
version = "0.0.1"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "neodash-app"
path = "src/main.rs"

[features]
default = []
gui = ["dep:gtk"]
adwaita = ["gui", "dep:adw"]
layer-shell = ["gui", "dep:gtk4-layer-shell"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
gtk = { workspace = true, optional = true }
adw = { workspace = true, optional = true }
gtk4-layer-shell = { workspace = true, optional = true }
neodash-core = { path = "../neodash-core" }
neodash-exec = { path = "../neodash-exec" }
neodash-platform = { path = "../neodash-platform" }
neodash-runtime = { path = "../neodash-runtime" }
tracing.workspace = true
tracing-subscriber.workspace = true
