[package]
name = "neodash-cli"
version = "0.0.1"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "neodash"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
neodash-core = { path = "../neodash-core" }
neodash-exec = { path = "../neodash-exec" }
neodash-platform = { path = "../neodash-platform" }
tracing.workspace = true
tracing-subscriber.workspace = true
