[package]
name = "neodash-daemon"
version = "0.0.1"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
clap.workspace = true
neodash-runtime = { path = "../neodash-runtime" }
anyhow.workspace = true
neodash-core = { path = "../neodash-core" }
neodash-exec = { path = "../neodash-exec" }
neodash-platform = { path = "../neodash-platform" }
tracing.workspace = true
tracing-subscriber.workspace = true
